--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^10.0.0",
+    "@react-native-firebase/firestore": "^10.0.0",
     "@react-navigation/material-bottom-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~39.0.2",
     "expo-camera": "~9.0.0",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^8.1.1",
     "material-ui-community-icons": "^0.15.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.4.0",
     "react-native-reanimated": "~1.13.0",
