--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-navigation-bar-color": "^2.0.1",
     "react-native-paper": "^4.4.0",
     "react-native-pie": "^1.1.2",
     "react-native-pie-chart": "^1.0.13",
